; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb3/extr_sge.c_add_one_rx_chunk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb3/extr_sge.c_add_one_rx_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rx_desc = type { i8*, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.rx_desc*, i32)* @add_one_rx_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_one_rx_chunk(i32 %0, %struct.rx_desc* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rx_desc*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.rx_desc* %1, %struct.rx_desc** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i8* @cpu_to_be32(i32 %7)
  %9 = load %struct.rx_desc*, %struct.rx_desc** %5, align 8
  %10 = getelementptr inbounds %struct.rx_desc, %struct.rx_desc* %9, i32 0, i32 3
  store i8* %8, i8** %10, align 8
  %11 = load i32, i32* %4, align 4
  %12 = ashr i32 %11, 32
  %13 = call i8* @cpu_to_be32(i32 %12)
  %14 = load %struct.rx_desc*, %struct.rx_desc** %5, align 8
  %15 = getelementptr inbounds %struct.rx_desc, %struct.rx_desc* %14, i32 0, i32 2
  store i8* %13, i8** %15, align 8
  %16 = call i32 (...) @dma_wmb()
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @V_FLD_GEN1(i32 %17)
  %19 = call i8* @cpu_to_be32(i32 %18)
  %20 = load %struct.rx_desc*, %struct.rx_desc** %5, align 8
  %21 = getelementptr inbounds %struct.rx_desc, %struct.rx_desc* %20, i32 0, i32 1
  store i8* %19, i8** %21, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @V_FLD_GEN2(i32 %22)
  %24 = call i8* @cpu_to_be32(i32 %23)
  %25 = load %struct.rx_desc*, %struct.rx_desc** %5, align 8
  %26 = getelementptr inbounds %struct.rx_desc, %struct.rx_desc* %25, i32 0, i32 0
  store i8* %24, i8** %26, align 8
  ret i32 0
}

declare dso_local i8* @cpu_to_be32(i32) #1

declare dso_local i32 @dma_wmb(...) #1

declare dso_local i32 @V_FLD_GEN1(i32) #1

declare dso_local i32 @V_FLD_GEN2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
